--- a/sss/Tags.html
+++ b/sss/Tags.html
@@ -71,7 +71,7 @@
 <figure>
 
 <figcaption><h3 id="Image">HTML5 Tag Elements :</h3></figcaption>
-<img src="C:\Users\DonJade\Desktop\WebPages\element.png" alt="Html tag elements">
+<img src="element.png" alt="Html tag elements">
 
 
 </figure>
@@ -83,12 +83,9 @@
 <h3 id="Song">Arctic Monkeys Song</h3>
 
 <audio controls preload="metadata">
-<source src="D:\Music\Arctic Monkeys\Crying Lightning.mp3" type="audio/mp3">
-<source src="D:\Music\Arctic Monkeys\Crying Lightning.mkv" type="audio/mkv">
-<source src="D:\Music\Arctic Monkeys\Crying Lightning.ogg" type="audio/ogg">
-<source src="D:\Music\Arctic Monkeys\Crying Lightning.wav" type="audio/wav">
+<source src="Crying Lightning.mp3" type="audio/mp3">
 </audio>
-Please <a href="D:\Music\Arctic Monkeys\Crying Lightning.mp3" download>Download</a> The Song
+Please <a href="Crying Lightning.mp3" download>Download</a> The Song
 
 </section>
 <section>
